--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
     "nav nav nav nav"
     "section section section section"
     "footer footer footer footer";
-    grid-template-rows: 20vh 15vh 50vh 30vh;
+    grid-template-rows: 25vh 25vh 25vh 25vh;
     grid-gap: 10px;
     background-color: black;
 }
@@ -14,21 +14,37 @@ body{
 header{
     grid-area: header;
     background-color: orangered;
+    display: flex;
+    justify-content: center;
+    background-color: gray;
+}
+
+header div{
+    background-color: brown;
+    width: 60%;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+}
+
+header div img{
+    height: 100%;
+    width: 100px;
 }
 
 nav{
     grid-area: nav;
-    background-color: blue
+    background-color: blue;
 }
 
 section{
     grid-area: section;
-    background-color: aquamarine
+    background-color: aquamarine;
 }
 
 aside{
     grid-area: aside;
-    background-color: blueviolet
+    background-color: blueviolet;
 }
 
 footer{
