--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@ body{
     "nav nav nav nav"
     "section section section section"
     "footer footer footer footer";
-    grid-template-rows: 25vh 25vh 25vh 25vh;
-    grid-gap: 10px;
+    grid-template-rows: 20vh 15vh 50vh 30vh;
+    grid-template-columns: 25% 25% 25% 25%;
     background-color: black;
 }
 
@@ -27,14 +27,38 @@ header div{
     justify-content: center;
 }
 
-header div img{
+header img{
     height: 100%;
-    width: 100px;
+    width: 120px;
 }
 
 nav{
     grid-area: nav;
     background-color: blue;
+    background-color: salmon;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+nav a{
+    text-decoration: none;
+    color: black;
+    text-transform: uppercase;
+    font-weight: 800;
+}
+nav a:hover{
+    color: white;
+    text-decoration: none;
+    color: black;
+    text-transform: uppercase;
+    font-weight: 800;
+}
+
+
+nav a:hover{
+    color: white;
 }
 
 section{
