--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 body{
     margin: 0;
     display: grid;
+    padding: 10px;
     grid-template-areas: "header header header header"
     "nav nav nav nav"
-    "section section section section"
+    "section section aside aside"
     "footer footer footer footer";
     grid-template-rows: 20vh 15vh 50vh 30vh;
     grid-template-columns: 25% 25% 25% 25%;
@@ -64,14 +65,26 @@ nav a:hover{
 section{
     grid-area: section;
     background-color: aquamarine;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-
-aside{
-    grid-area: aside;
-    background-color: blueviolet;
+section img{
+    width: 300px;
+    border-radius: 100%;
+    
 }
-
-footer{
-    grid-area: footer;
-    background-color: pink;
+section img:hover{
+    width: 320px;
 }
+    
+    aside{
+        grid-area: aside;
+        background-color: blueviolet;
+    }
+    
+    footer{
+        grid-area: footer;
+        background-color: pink;
+    }
